<resources>
    <string name="app_name">Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="add_reminder">Add reminder</string>
    <string name="new_reminder">New Reminder</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="no_reminders_are_set">No reminders are set!!</string>
</resources>