<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <TextView
            android:id="@+id/dialogTitle"
            style="@style/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/blue"
            android:text="@string/new_reminder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="25dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/border_color"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/enter_the_title"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toEndOf="@id/end">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="25dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/border_color"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/choose_a_date"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toEndOf="@id/end">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:clickable="false"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeLayout"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="25dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/border_color"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/choose_a_time"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@id/dateLayout"
            app:layout_constraintStart_toStartOf="@id/start"
            app:layout_constraintEnd_toEndOf="@id/end">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:clickable="false"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            style="@style/Reminder.Buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            app:cornerRadius="4dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/add"
            app:layout_constraintTop_toBottomOf="@id/timeLayout"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintEnd_toEndOf="@id/end"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Reminder.Buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cornerRadius="4dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/grey"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/add"
            app:layout_constraintTop_toBottomOf="@id/timeLayout"
            app:layout_constraintStart_toStartOf="@id/start"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>